--- a/README
+++ b/README
@@ -1,2 +1,16 @@
-Kyle Alce
-ticooki@outlook.fr
+# Simple Lexer V1
+
+It is a simple Lexer to transforme arithmetical expression string into Tokens.
+
+## Installation
+
+```bash
+git clone https://github.com/KyleAlce/CLexer.git
+cd CLexer
+make
+```
+
+## Authors
+
+KyleAlce
+
